--- a/package.json
+++ b/package.json
@@ -74,12 +74,13 @@
     "eslint-plugin-antfu": "^2.2.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^0.5.0",
-    "eslint-plugin-jsdoc": "^48.2.4",
+    "eslint-plugin-jsdoc": "^48.2.5",
     "eslint-plugin-jsonc": "^2.15.1",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.10.0",
+    "eslint-plugin-regexp": "^2.5.0",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^53.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
@@ -97,7 +98,7 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.12",
-    "@eslint-react/eslint-plugin": "^1.5.11",
+    "@eslint-react/eslint-plugin": "^1.5.12",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
