--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.3",
     "@stylistic/eslint-plugin": "2.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "eslint-config-flat-gitignore": "^0.1.5",
     "eslint-flat-config-utils": "^0.2.5",
     "eslint-merge-processors": "^0.1.0",
@@ -74,10 +74,10 @@
     "eslint-plugin-antfu": "^2.3.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^0.5.1",
-    "eslint-plugin-jsdoc": "^48.2.7",
+    "eslint-plugin-jsdoc": "^48.2.9",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-markdown": "^5.0.0",
-    "eslint-plugin-n": "^17.7.0",
+    "eslint-plugin-n": "^17.8.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.10.0",
     "eslint-plugin-regexp": "^2.6.0",
@@ -88,7 +88,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "eslint-plugin-yml": "^1.14.0",
     "eslint-processor-vue-blocks": "^0.1.2",
-    "globals": "^15.3.0",
+    "globals": "^15.4.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
     "prompts": "^2.4.2",
@@ -98,33 +98,33 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.12",
-    "@eslint-react/eslint-plugin": "^1.5.14",
+    "@eslint-react/eslint-plugin": "^1.5.15",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
-    "@eslint/config-inspector": "^0.4.10",
+    "@eslint/config-inspector": "^0.4.11",
     "@lincy/eslint-config": "workspace:*",
     "@stylistic/eslint-plugin-migrate": "^2.1.0",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.0",
+    "@types/node": "^20.14.2",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.60.4",
+    "@unocss/eslint-plugin": "^0.61.0",
     "bumpp": "^9.4.1",
-    "eslint": "npm:eslint-ts-patch@9.2.0-6",
+    "eslint": "9.4.0",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-ts-patch": "9.2.0-6",
+    "eslint-ts-patch": "9.4.0-0",
     "eslint-typegen": "^0.2.4",
     "esno": "^4.7.0",
-    "lint-staged": "^15.2.5",
-    "prettier": "^3.3.0",
+    "lint-staged": "^15.2.6",
+    "prettier": "^3.3.2",
     "react": "^18.3.1",
     "rimraf": "^5.0.7",
     "simple-git-hooks": "^2.11.1",
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.35.0",
-    "tsup": "^8.0.2",
+    "tsup": "^8.1.0",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
     "vitest": "^1.6.0",
