--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
     "@antfu/install-pkg": "^0.3.3",
-    "@stylistic/eslint-plugin": "2.6.0-beta.1",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.34",
-    "@typescript-eslint/parser": "8.0.0-alpha.34",
+    "@stylistic/eslint-plugin": "2.6.1",
+    "@typescript-eslint/eslint-plugin": "8.0.0",
+    "@typescript-eslint/parser": "8.0.0",
     "eslint-config-flat-gitignore": "^0.1.8",
     "eslint-flat-config-utils": "^0.3.0",
     "eslint-merge-processors": "^0.1.0",
@@ -74,7 +74,7 @@
     "eslint-plugin-antfu": "^2.3.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.8.3",
+    "eslint-plugin-jsdoc": "^48.10.2",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-n": "^17.10.1",
@@ -88,7 +88,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "eslint-plugin-yml": "^1.14.0",
     "eslint-processor-vue-blocks": "^0.1.2",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
     "prompts": "^2.4.2",
@@ -98,23 +98,23 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.22.0",
-    "@eslint-react/eslint-plugin": "^1.6.0",
+    "@eslint-react/eslint-plugin": "^1.8.0",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
     "@eslint/config-inspector": "^0.5.2",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^2.4.0",
+    "@stylistic/eslint-plugin-migrate": "^2.6.1",
     "@types/eslint": "^9.6.0",
-    "@types/node": "^20.14.12",
+    "@types/node": "^22.0.2",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.61.6",
-    "bumpp": "^9.4.1",
+    "@unocss/eslint-plugin": "^0.61.9",
+    "bumpp": "^9.4.2",
     "eslint": "9.8.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "eslint-ts-patch": "9.5.0-0",
+    "eslint-ts-patch": "9.8.0-1",
     "eslint-typegen": "^0.3.0",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.7",
@@ -127,8 +127,8 @@
     "tsup": "^8.2.3",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
-    "vitest": "^2.0.4",
-    "vue": "^3.4.34"
+    "vitest": "^2.0.5",
+    "vue": "^3.4.35"
   },
   "pnpm": {
     "peerDependencyRules": {
