--- a/package.json
+++ b/package.json
@@ -63,28 +63,28 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^0.3.3",
-    "@stylistic/eslint-plugin": "2.6.1",
-    "@typescript-eslint/eslint-plugin": "8.0.0",
-    "@typescript-eslint/parser": "8.0.0",
+    "@antfu/install-pkg": "^0.3.4",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
+    "@stylistic/eslint-plugin": "2.6.2",
+    "@typescript-eslint/eslint-plugin": "8.1.0",
+    "@typescript-eslint/parser": "8.1.0",
+    "@vitest/eslint-plugin": "^1.0.1",
     "eslint-config-flat-gitignore": "^0.1.8",
     "eslint-flat-config-utils": "^0.3.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
-    "eslint-plugin-antfu": "^2.3.4",
-    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-antfu": "^2.3.5",
     "eslint-plugin-import-x": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.10.2",
+    "eslint-plugin-jsdoc": "^50.0.1",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-n": "^17.10.1",
+    "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-perfectionist": "^3.0.0",
+    "eslint-plugin-perfectionist": "^3.1.3",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-toml": "^0.11.1",
     "eslint-plugin-unicorn": "^55.0.0",
-    "eslint-plugin-unused-imports": "^4.0.1",
-    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "eslint-plugin-vue": "^9.27.0",
     "eslint-plugin-yml": "^1.14.0",
     "eslint-processor-vue-blocks": "^0.1.2",
@@ -97,38 +97,38 @@
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.22.0",
-    "@eslint-react/eslint-plugin": "^1.8.0",
+    "@antfu/ni": "^0.22.1",
+    "@eslint-react/eslint-plugin": "^1.10.0",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
     "@eslint/config-inspector": "^0.5.2",
     "@lincy/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^2.6.1",
+    "@stylistic/eslint-plugin-migrate": "^2.6.2",
     "@types/eslint": "^9.6.0",
-    "@types/node": "^22.0.2",
+    "@types/node": "^22.2.0",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.61.9",
-    "bumpp": "^9.4.2",
-    "eslint": "9.8.0",
+    "@unocss/eslint-plugin": "^0.62.1",
+    "bumpp": "^9.5.1",
+    "eslint": "9.9.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-ts-patch": "9.8.0-1",
     "eslint-typegen": "^0.3.0",
     "esno": "^4.7.0",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.35.0",
-    "tsup": "^8.2.3",
+    "tsup": "^8.2.4",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vitest": "^2.0.5",
-    "vue": "^3.4.35"
+    "vue": "^3.4.37"
   },
   "pnpm": {
     "peerDependencyRules": {
