--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.62.3",
     "bumpp": "^9.5.2",
-    "eslint": "9.9.1",
+    "eslint": "^9.9.1",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
