--- a/package.json
+++ b/package.json
@@ -70,27 +70,27 @@
     "@antfu/install-pkg": "^0.4.1",
     "@clack/prompts": "^0.7.0",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
-    "@stylistic/eslint-plugin": "2.7.1",
-    "@typescript-eslint/eslint-plugin": "8.3.0",
-    "@typescript-eslint/parser": "8.3.0",
-    "@vitest/eslint-plugin": "^1.1.0",
+    "@eslint/markdown": "^6.1.0",
+    "@stylistic/eslint-plugin": "2.8.0",
+    "@typescript-eslint/eslint-plugin": "8.5.0",
+    "@typescript-eslint/parser": "8.5.0",
+    "@vitest/eslint-plugin": "^1.1.3",
     "eslint-config-flat-gitignore": "^0.3.0",
-    "eslint-flat-config-utils": "^0.3.1",
+    "eslint-flat-config-utils": "^0.4.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
-    "eslint-plugin-antfu": "^2.3.6",
-    "eslint-plugin-import-x": "^4.1.1",
+    "eslint-plugin-antfu": "^2.6.0",
+    "eslint-plugin-import-x": "^4.2.1",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^3.3.0",
+    "eslint-plugin-perfectionist": "^3.5.0",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-toml": "^0.11.1",
     "eslint-plugin-unicorn": "^55.0.0",
     "eslint-plugin-unused-imports": "^4.1.3",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint-plugin-vue": "^9.28.0",
     "eslint-plugin-yml": "^1.14.0",
     "eslint-processor-vue-blocks": "^0.1.2",
     "globals": "^15.9.0",
@@ -103,27 +103,26 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.23.0",
-    "@eslint-react/eslint-plugin": "^1.12.3",
+    "@eslint-react/eslint-plugin": "^1.14.1",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
     "@eslint/config-inspector": "^0.5.4",
     "@lincy/eslint-config": "workspace:*",
     "@prettier/plugin-xml": "^3.4.1",
-    "@stylistic/eslint-plugin-migrate": "^2.7.1",
-    "@types/eslint": "^9.6.1",
-    "@types/node": "^22.5.1",
+    "@stylistic/eslint-plugin-migrate": "^2.8.0",
+    "@types/node": "^22.5.4",
     "@types/prompts": "^2.4.9",
     "@unocss/eslint-plugin": "^0.62.3",
     "bumpp": "^9.5.2",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-ts-patch": "9.8.0-1",
-    "eslint-typegen": "^0.3.1",
+    "eslint-typegen": "^0.3.2",
     "esno": "^4.7.0",
-    "lint-staged": "^15.2.9",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "rimraf": "^6.0.1",
@@ -131,10 +130,10 @@
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.35.0",
     "tsup": "^8.2.4",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "unbuild": "^2.0.0",
-    "vitest": "^2.0.5",
-    "vue": "^3.4.38"
+    "vitest": "^2.1.0",
+    "vue": "^3.5.4"
   },
   "pnpm": {
     "peerDependencyRules": {
