--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,15 @@
 {
-  // Disable the default formatter
-  "prettier.enable": false,
-  "editor.formatOnSave": false,
-
   // Auto fix
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "never"
   },
-
+  "editor.formatOnSave": false,
+  "eslint.options": {
+    "flags": [
+      "unstable_ts_config"
+    ]
+  },
   // Silent the stylistic rules in you IDE, but still auto fix them
   "eslint.rules.customizations": [
     // { "rule": "style/*", "severity": "off", "fixable": true },
@@ -21,7 +22,6 @@
     // { "rule": "*quotes", "severity": "off", "fixable": true },
     // { "rule": "*semi", "severity": "off", "fixable": true }
   ],
-
   // The following is optional.
   // It's better to put under project setting `.vscode/settings.json`
   // to avoid conflicts with working with different eslint configs
@@ -51,8 +51,6 @@
     "pcss",
     "postcss"
   ],
-
-  "eslint.options": {
-    "flags": ["unstable_ts_config"]
-  }
+  // Disable the default formatter
+  "prettier.enable": false
 }
