--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.3.0",
-  "packageManager": "pnpm@9.14.2",
+  "packageManager": "pnpm@9.14.4",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "release": "bumpp && npm publish -r --access public",
     "test": "vitest",
     "typegen": "esno scripts/typegen.ts",
-    "lint": "pnpm run stub && eslint .",
+    "lint": "pnpm run stub && eslint . --flag unstable_ts_config",
     "lint:fix": "eslint . --flag unstable_ts_config --fix",
     "lint:ts": "tsc --noEmit",
     "prepare": "npx simple-git-hooks"
@@ -67,33 +67,33 @@
   },
   "dependencies": {
     "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^0.4.1",
+    "@antfu/install-pkg": "^0.5.0",
     "@clack/prompts": "^0.8.2",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/markdown": "^6.2.1",
-    "@stylistic/eslint-plugin": "2.10.1",
-    "@typescript-eslint/eslint-plugin": "8.13.0",
-    "@typescript-eslint/parser": "8.13.0",
-    "@vitest/eslint-plugin": "^1.1.10",
+    "@stylistic/eslint-plugin": "2.11.0",
+    "@typescript-eslint/eslint-plugin": "8.17.0",
+    "@typescript-eslint/parser": "8.17.0",
+    "@vitest/eslint-plugin": "^1.1.14",
     "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-flat-config-utils": "^0.4.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-antfu": "^2.7.0",
-    "eslint-plugin-import-x": "^4.4.3",
-    "eslint-plugin-jsdoc": "^50.5.0",
+    "eslint-plugin-import-x": "^4.5.0",
+    "eslint-plugin-jsdoc": "^50.6.0",
     "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-n": "^17.14.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.0.3",
+    "eslint-plugin-perfectionist": "^4.1.2",
     "eslint-plugin-regexp": "^2.7.0",
-    "eslint-plugin-toml": "^0.11.1",
+    "eslint-plugin-toml": "^0.12.0",
     "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^9.31.0",
-    "eslint-plugin-yml": "^1.15.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-yml": "^1.16.0",
     "eslint-processor-vue-blocks": "^0.1.2",
-    "globals": "^15.12.0",
+    "globals": "^15.13.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.1",
     "prompts": "^2.4.2",
@@ -103,7 +103,7 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.23.1",
-    "@eslint-react/eslint-plugin": "^1.17.1",
+    "@eslint-react/eslint-plugin": "^1.17.3",
     "@eslint-types/jsdoc": "48.2.2",
     "@eslint-types/typescript-eslint": "^7.5.0",
     "@eslint-types/unicorn": "^52.0.0",
@@ -112,29 +112,29 @@
     "@prettier/plugin-xml": "^3.4.1",
     "@stylistic/eslint-plugin-migrate": "^2.11.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.9.3",
+    "@types/node": "^22.10.1",
     "@types/prompts": "^2.4.9",
-    "@unocss/eslint-plugin": "^0.64.1",
+    "@unocss/eslint-plugin": "^0.65.0",
     "bumpp": "^9.8.1",
-    "eslint": "^9.15.0",
-    "eslint-plugin-format": "^0.1.2",
+    "eslint": "^9.16.0",
+    "eslint-plugin-format": "^0.1.3",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-ts-patch": "9.8.0-1",
     "eslint-typegen": "^0.3.2",
     "esno": "^4.8.0",
     "fs-extra": "^11.2.0",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "react": "^18.3.1",
     "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
     "simple-open-url": "^3.0.1",
     "sucrase": "^3.35.0",
     "tsup": "^8.3.5",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.2",
     "unbuild": "^2.0.0",
-    "vitest": "^2.1.5",
+    "vitest": "^2.1.8",
     "vue": "^3.5.13"
   },
   "pnpm": {
@@ -146,8 +146,8 @@
   },
   "resolutions": {
     "@eslint-community/eslint-utils": "^4.4.1",
-    "@typescript-eslint/utils": "^8.15.0",
-    "eslint": "^9.15.0",
+    "@typescript-eslint/utils": "^8.17.0",
+    "eslint": "^9.16.0",
     "tsx": "^4.19.2"
   },
   "simple-git-hooks": {
