--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.5.0",
-  "packageManager": "pnpm@10.6.1",
+  "packageManager": "pnpm@10.6.2",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -66,88 +66,73 @@
     }
   },
   "dependencies": {
-    "@antfu/eslint-define-config": "1.23.0-2",
-    "@antfu/install-pkg": "^1.0.0",
-    "@clack/prompts": "^0.10.0",
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint/markdown": "^6.3.0",
-    "@stylistic/eslint-plugin": "4.0.0-beta.1",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
-    "@vitest/eslint-plugin": "^1.1.36",
-    "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-flat-config-utils": "^2.0.1",
-    "eslint-merge-processors": "^2.0.0",
-    "eslint-parser-plain": "^0.1.1",
-    "eslint-plugin-antfu": "^3.1.1",
-    "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-jsdoc": "^50.6.3",
-    "eslint-plugin-jsonc": "^2.19.1",
-    "eslint-plugin-n": "^17.16.2",
-    "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.10.1",
-    "eslint-plugin-pnpm": "^0.1.2",
-    "eslint-plugin-regexp": "^2.7.0",
-    "eslint-plugin-toml": "^0.12.0",
-    "eslint-plugin-unicorn": "56.0.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^10.0.0",
-    "eslint-plugin-yml": "^1.17.0",
-    "eslint-processor-vue-blocks": "^2.0.0",
-    "globals": "^16.0.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "local-pkg": "^1.1.1",
-    "prompts": "^2.4.2",
-    "toml-eslint-parser": "^0.10.0",
-    "vue-eslint-parser": "^10.1.1",
-    "yaml-eslint-parser": "^1.3.0"
+    "@antfu/install-pkg": "catalog:",
+    "@clack/prompts": "catalog:",
+    "@eslint-community/eslint-plugin-eslint-comments": "catalog:",
+    "@eslint/markdown": "catalog:",
+    "@stylistic/eslint-plugin": "catalog:",
+    "@typescript-eslint/eslint-plugin": "catalog:",
+    "@typescript-eslint/parser": "catalog:",
+    "@vitest/eslint-plugin": "catalog:",
+    "eslint-config-flat-gitignore": "catalog:",
+    "eslint-flat-config-utils": "catalog:",
+    "eslint-merge-processors": "catalog:",
+    "eslint-parser-plain": "catalog:",
+    "eslint-plugin-antfu": "catalog:",
+    "eslint-plugin-import-x": "catalog:",
+    "eslint-plugin-jsdoc": "catalog:",
+    "eslint-plugin-jsonc": "catalog:",
+    "eslint-plugin-n": "catalog:",
+    "eslint-plugin-no-only-tests": "catalog:",
+    "eslint-plugin-perfectionist": "catalog:",
+    "eslint-plugin-pnpm": "catalog:",
+    "eslint-plugin-regexp": "catalog:",
+    "eslint-plugin-toml": "catalog:",
+    "eslint-plugin-unicorn": "catalog:",
+    "eslint-plugin-unused-imports": "catalog:",
+    "eslint-plugin-vue": "catalog:",
+    "eslint-plugin-yml": "catalog:",
+    "eslint-processor-vue-blocks": "catalog:",
+    "globals": "catalog:",
+    "jsonc-eslint-parser": "catalog:",
+    "local-pkg": "catalog:",
+    "prompts": "catalog:",
+    "toml-eslint-parser": "catalog:",
+    "vue-eslint-parser": "catalog:",
+    "yaml-eslint-parser": "catalog:"
   },
   "devDependencies": {
-    "@antfu/ni": "^23.3.1",
-    "@eslint-react/eslint-plugin": "^1.31.0",
-    "@eslint-types/jsdoc": "48.2.2",
-    "@eslint-types/typescript-eslint": "^7.5.0",
-    "@eslint-types/unicorn": "^52.0.0",
-    "@eslint/config-inspector": "^1.0.2",
+    "@antfu/ni": "catalog:",
+    "@eslint-react/eslint-plugin": "catalog:",
+    "@eslint-types/jsdoc": "catalog:",
+    "@eslint-types/typescript-eslint": "catalog:",
+    "@eslint-types/unicorn": "catalog:",
+    "@eslint/config-inspector": "catalog:",
     "@lincy/eslint-config": "workspace:*",
-    "@prettier/plugin-xml": "^3.4.1",
-    "@stylistic/eslint-plugin-migrate": "^4.2.0",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@unocss/eslint-plugin": "^66.1.0-beta.3",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.22.0",
-    "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-ts-patch": "9.8.0-1",
-    "eslint-typegen": "^2.0.0",
-    "esno": "^4.8.0",
-    "lint-staged": "^15.4.3",
-    "prettier": "^3.5.3",
-    "react": "^19.0.0",
-    "simple-git-hooks": "^2.11.1",
-    "simple-open-url": "^3.0.1",
-    "sucrase": "^3.35.0",
-    "tinyglobby": "^0.2.12",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.2",
-    "unbuild": "^3.5.0",
-    "vitest": "^3.0.8",
-    "vue": "^3.5.13"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "prettier"
-      ]
-    }
-  },
-  "resolutions": {
-    "@eslint-community/eslint-utils": "^4.4.1",
-    "@typescript-eslint/utils": "^8.26.0",
-    "eslint": "^9.22.0",
-    "tsx": "^4.19.3"
+    "@prettier/plugin-xml": "catalog:",
+    "@stylistic/eslint-plugin-migrate": "catalog:",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@unocss/eslint-plugin": "catalog:",
+    "bumpp": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-format": "catalog:",
+    "eslint-plugin-react-hooks": "catalog:",
+    "eslint-plugin-react-refresh": "catalog:",
+    "eslint-typegen": "catalog:",
+    "esno": "catalog:",
+    "lint-staged": "catalog:",
+    "prettier": "catalog:",
+    "react": "catalog:",
+    "simple-git-hooks": "catalog:",
+    "simple-open-url": "catalog:",
+    "sucrase": "catalog:",
+    "tinyglobby": "catalog:",
+    "tsup": "catalog:",
+    "typescript": "catalog:",
+    "unbuild": "catalog:",
+    "vitest": "catalog:",
+    "vue": "catalog:"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
