--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lincy/eslint-config",
   "type": "module",
   "version": "5.7.1",
-  "packageManager": "pnpm@10.13.0",
+  "packageManager": "pnpm@10.13.1",
   "description": "LinCenYing's ESLint config",
   "author": "LinCenYing <lincenying@gmail.com> (https://github.com/lincenying/)",
   "license": "MIT",
@@ -38,6 +38,7 @@
   },
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.15.0",
+    "@next/eslint-plugin-next": "^15.4.0-canary.115",
     "@prettier/plugin-xml": "^3.4.1",
     "@unocss/eslint-plugin": ">=0.50.0",
     "eslint": ">=9.5.0",
@@ -47,6 +48,9 @@
   },
   "peerDependenciesMeta": {
     "@eslint-react/eslint-plugin": {
+      "optional": true
+    },
+    "@next/eslint-plugin-next": {
       "optional": true
     },
     "@prettier/plugin-xml": {
@@ -103,21 +107,22 @@
   },
   "devDependencies": {
     "@antfu/ni": "catalog:dev",
-    "@eslint-react/eslint-plugin": "catalog:dev",
+    "@eslint-react/eslint-plugin": "catalog:peer",
     "@eslint-types/typescript-eslint": "catalog:dev",
     "@eslint-types/unicorn": "catalog:dev",
     "@eslint/config-inspector": "catalog:dev",
     "@lincy/eslint-config": "workspace:*",
-    "@prettier/plugin-xml": "catalog:dev",
+    "@next/eslint-plugin-next": "catalog:peer",
+    "@prettier/plugin-xml": "catalog:peer",
     "@stylistic/eslint-plugin-migrate": "catalog:dev",
     "@types/node": "catalog:dev",
     "@types/react": "catalog:dev",
-    "@unocss/eslint-plugin": "catalog:dev",
+    "@unocss/eslint-plugin": "catalog:peer",
     "bumpp": "catalog:dev",
-    "eslint": "catalog:dev",
-    "eslint-plugin-format": "catalog:dev",
-    "eslint-plugin-react-hooks": "catalog:dev",
-    "eslint-plugin-react-refresh": "catalog:dev",
+    "eslint": "catalog:peer",
+    "eslint-plugin-format": "catalog:peer",
+    "eslint-plugin-react-hooks": "catalog:peer",
+    "eslint-plugin-react-refresh": "catalog:peer",
     "eslint-typegen": "catalog:dev",
     "esno": "catalog:dev",
     "execa": "catalog:dev",
@@ -131,7 +136,7 @@
     "tsdown": "catalog:dev",
     "typescript": "catalog:dev",
     "vitest": "catalog:test",
-    "vue": "catalog:dev"
+    "vue": "catalog:peer"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
