--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,27 +3,20 @@ packages:
 
 overrides:
   '@eslint-community/eslint-utils': ^4.7.0
-  '@typescript-eslint/utils': ^8.37.0
+  '@typescript-eslint/utils': ^8.38.0
   eslint: ^9.31.0
   tsx: ^4.20.3
 
 catalogs:
   dev:
     '@antfu/ni': ^25.0.0
-    '@eslint-react/eslint-plugin': ^1.52.3
     '@eslint-types/typescript-eslint': ^7.5.0
     '@eslint-types/unicorn': ^52.0.0
     '@eslint/config-inspector': ^1.1.0
-    '@prettier/plugin-xml': ^3.4.2
     '@stylistic/eslint-plugin-migrate': ^4.4.1
-    '@types/node': ^24.0.13
+    '@types/node': ^24.1.0
     '@types/react': ^19.1.8
-    '@unocss/eslint-plugin': ^66.3.3
     bumpp: ^10.2.0
-    eslint: ^9.31.0
-    eslint-plugin-format: ^1.0.1
-    eslint-plugin-react-hooks: ^5.2.0
-    eslint-plugin-react-refresh: ^0.4.20
     eslint-typegen: ^2.2.1
     esno: ^4.8.0
     execa: ^9.6.0
@@ -34,17 +27,26 @@ catalogs:
     simple-open-url: ^3.0.1
     sucrase: ^3.35.0
     tinyglobby: ^0.2.14
-    tsdown: ^0.12.9
+    tsdown: ^0.13.0
     typescript: ^5.8.3
-    vue: ^3.5.17
+  peer:
+    '@eslint-react/eslint-plugin': ^1.52.3
+    '@next/eslint-plugin-next': ^15.4.3
+    '@prettier/plugin-xml': ^3.4.2
+    '@unocss/eslint-plugin': ^66.3.3
+    eslint: ^9.31.0
+    eslint-plugin-format: ^1.0.1
+    eslint-plugin-react-hooks: ^5.2.0
+    eslint-plugin-react-refresh: ^0.4.20
+    vue: ^3.5.18
   prod:
     '@antfu/install-pkg': ^1.1.0
     '@clack/prompts': ^0.11.0
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
-    '@eslint/markdown': ^7.0.0
-    '@stylistic/eslint-plugin': ^5.1.0
-    '@typescript-eslint/eslint-plugin': ^8.37.0
-    '@typescript-eslint/parser': ^8.37.0
+    '@eslint/markdown': ^7.1.0
+    '@stylistic/eslint-plugin': ^5.2.2
+    '@typescript-eslint/eslint-plugin': ^8.38.0
+    '@typescript-eslint/parser': ^8.38.0
     '@vitest/eslint-plugin': ^1.3.4
     eslint-config-flat-gitignore: ^2.1.0
     eslint-flat-config-utils: ^2.1.0
@@ -52,15 +54,15 @@ catalogs:
     eslint-parser-plain: ^0.1.1
     eslint-plugin-antfu: ^3.1.1
     eslint-plugin-import-lite: ^0.3.0
-    eslint-plugin-jsdoc: ^51.3.4
+    eslint-plugin-jsdoc: ^51.4.1
     eslint-plugin-jsonc: ^2.20.1
     eslint-plugin-n: ^17.21.0
     eslint-plugin-no-only-tests: ^3.3.0
     eslint-plugin-perfectionist: ^4.15.0
-    eslint-plugin-pnpm: ^1.0.0
+    eslint-plugin-pnpm: ^1.1.0
     eslint-plugin-regexp: ^2.9.0
     eslint-plugin-toml: ^0.12.0
-    eslint-plugin-unicorn: ^59.0.1
+    eslint-plugin-unicorn: ^60.0.0
     eslint-plugin-unused-imports: ^4.1.4
     eslint-plugin-vue: ^10.3.0
     eslint-plugin-yml: ^1.18.0
